Add and style html elements

--- a/index.html
+++ b/index.html
@@ -18,6 +18,45 @@
     <script src="https://kit.fontawesome.com/5899fa846f.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <section id="rps-content">
+        <div class="wrap">
+
+            <h1>Rock, Paper Scissors!</h1>
+
+            <div class="controls-contain">
+
+                <button class="control" data-value="rock" type="button">
+                    <i class="fas fa-hand-rock"></i>
+                    Rock
+                </button>
+
+                <button class="control" data-value="paper" type="button">
+                    <i class="fas fa-hand-paper"></i>
+                    Paper
+                </button>
+
+                <button class="control" data-value="scissors" type="button">
+                    <i class="fa-solid fa-hand-scissors"></i>
+                    Scissors
+                </button>
+
+            </div>
+
+            <div id="scoreboard">
+
+                <span id="player-score">
+                    Player: 0 
+                </span>
+
+                <span id="computer-score">
+                    Computer: 0
+                </span>
+                
+            </div>
+
+        </div>
+    </section>
     
     <script src="scripts.js"></script>
 </body>
