Add DOM manipulation to functions

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
             <h1>Rock, Paper Scissors!</h1>
 
+            <p>Click a button to make your choice, the computer choice will be generated randomly. First to five points wins, good luck!</p>
+
             <div class="controls-contain">
 
                 <button class="control" data-value="rock" type="button">
@@ -54,6 +56,8 @@
                 </span>
                 
             </div>
+
+            <p id="round-results"></p>
 
         </div>
     </section>
