Add logic to run game and stop when score is reached

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 
             <p id="round-results"></p>
 
+            <p id="game-results" class="bold large"></p>
+
         </div>
     </section>
     
