Create and style reset button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <p>Click a button to make your choice, the computer choice will be generated randomly. First to five points wins, good luck!</p>
 
-            <div class="controls-contain">
+            <div class="buttons-contain">
 
                 <button class="control" data-value="rock" type="button">
                     <i class="fas fa-hand-rock"></i>
@@ -60,6 +60,12 @@
             <p id="round-results"></p>
 
             <p id="game-results" class="bold large"></p>
+
+            <div class="buttons-contain center">
+                <button id="reset-game">
+                    Reset Game
+                </button>
+            </div>
 
         </div>
     </section>
